--- a/src/App.css
+++ b/src/App.css
@@ -2,37 +2,55 @@
   text-align: center;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
+.location-search-bar{
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
   display: flex;
-  flex-direction: column;
+  flex-direction: row;
   align-items: center;
   justify-content: center;
-  font-size: calc(10px + 2vmin);
+  margin: 10px;
+
+}
+
+.location-search-bar form{
+  margin-right: 25px;
+}
+
+.location-search-bar input[type="text"]{
+
+  height: 30px;
+  border: none;
+  border-bottom: 2px solid black;
+
+}
+
+.location-search-bar input[type="submit"]{
+
+  height: 30px;
+  background-color: #282c34;
+  border:none;
+  border-radius: 2px;
   color: white;
+  font-weight: 700;
+
 }
 
-.App-link {
-  color: #61dafb;
+
+.location-image-container{
+
+  width: 200px;
+  height: 200px;
+  position: relative;
+  margin-bottom: 15px;
+
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.location-image-container img{
+
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+  position: absolute;
+
 }
+
