--- a/src/Pages/SavedVenues/saved-venues.style.css
+++ b/src/Pages/SavedVenues/saved-venues.style.css
@@ -1,3 +1,24 @@
-.saved-venue-container{
+.saved-venues-container{
     margin-top: 10px;
+}
+
+.saved-venues-container h3{
+
+    color: black;
+
+}
+
+.saved-venues-container h4{
+
+    color: gray;
+
+}
+
+.saved-venue-container{
+
+    margin: auto;
+    margin-bottom: 10px;
+    border: 1px solid lightgray;
+    width: 90%;
+
 }
